<resources>
    <string name="app_name">TID.0</string>
    <string name="please_login_first">Veuillez se connecter</string>
    <string name="username">Username</string>
    <string name="login">Se connecter</string>
    <string name="nom_prenom">Nom et prénom</string>
    <string name="password">Mot de passe</string>
    <string name="btnScan">Entrer</string>
    <string name="scan_palette"> Entrer numero palette</string>
    <string name="n_of">N°Of</string>
    <string name="code_article">Code Article</string>
    <string name="desarticle">Désignation</string>
    <string name="quantite">Quantité</string>
    <string name="destination">Destination</string>
    <string name="date">date</string>
    <string name="scanner">Scanner</string>
    <string name="cancel">Annuler</string>
    <string name="valider">Valider</string>
    <string name="cloturer">cloturer</string>
    <string name="name">username</string>
    <string name="r_ception">Réception</string>
    <string name="transfert">Transfert</string>
    <string name="signin">Créer un compte</string>
    <string name="create_acc">Créer un compte</string>
    <string name="admin">Veuillez s\'identifier</string>
    <string name="verif">Vérifier le username et mot de passe</string>
    <string name="exist">Compte existe déjâ</string>
</resources>