<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="130dp"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="100dp"

            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_acc"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#E92C0C"
            />

        <EditText
            android:id="@+id/user_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_prenom"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edtdesign"
            />
        <EditText
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edtdesign"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:layout_gravity="right"
            android:background="@drawable/btndesign"
            android:layout_marginTop="10dp"
            />


    </LinearLayout>

</RelativeLayout>