<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScanActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/numPalette"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="@string/scan_palette"
                android:background="@drawable/rounded_editt"
                android:ems="10"
                android:hint="@string/scan_palette"
                android:inputType="text"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_round"
                android:text="@string/btnScan"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_round"
            android:text="@string/scanner"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cloturer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_round_reception"
            android:text="@string/cloturer"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>


    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/info_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/n_of"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/code_article"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/desarticle"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/quantite"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/date"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/of"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/n_of"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:id="@+id/code_article"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/code_article"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:id="@+id/des_article"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/desarticle"
                            android:textSize="12sp">

                        </TextView>

                        <EditText
                            android:id="@+id/quantité"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:hint="Quantité"
                            android:padding="10dp"
                            android:textSize="18sp">

                        </EditText>

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/date"
                            android:textSize="18sp">
                        </TextView>


                    </LinearLayout>



                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="20dp">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_cancel"
                        android:text="@string/cancel"
                        android:textColor="#fff"
                        android:textSize="20sp" />


                    <Button
                        android:id="@+id/btn_valider"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button"
                        android:text="@string/valider"
                        android:textColor="#fff"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listview"
            tools:listitem="@layout/row_item"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dip">
        </ListView>

    </LinearLayout>



</LinearLayout>